fix-gap-issues

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,6 +38,11 @@
         left: 38% !important;
   }
 }
+@media (min-width: 1536px) and (max-width: 2700px) {
+  .sittingMan{
+      left: 32% !important;
+}
+}
 
   @media (min-width: 320px) and (max-width: 469px) {
     .manClimb{
@@ -138,4 +143,9 @@
     {
         right: -40px !important;
     }
+}
+@media (min-width: 1024px) and (max-width:1124px) {
+  .fotterDiv{
+    gap: 50px !important;
+  }
 }
